ejemplos/06-rancher/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: curso-rancher
  labels:
    app.kubernetes.io/part-of: rancher-k3s-demo
