ejemplos/06-rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: curso-rancher
  labels:
    app: demo-web
spec:
  selector:
    app: demo-web
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
